--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,16 @@ body {
 	text-align: center;
 }
 .title {
+	font-family:  digi;
 	display: block;
-	font-size: 230px;
+	font-size: 200px;
+	transition: all 0.5s;
+	margin: -50px;
+	cursor: pointer;
+}
+.title:hover {
+	text-shadow: 0px 0px 10px #C30C04;
+	color: #C30C04;
 }
 .all{
 	position: absolute;
@@ -24,7 +32,7 @@ body {
 }
 .headlinks a {
 	font-family:  digi;
-	text-shadow: 0px 0px 10px #C30C04;
+	text-shadow: 0px 0px 0px #C30C04;
 	color:#C30C04;
 	letter-spacing: 2px;
 	font-size: 28px;
@@ -33,8 +41,8 @@ body {
 	transition: all 0.2s;
 }
 .headlinks a:hover {
-	text-shadow: 0px 0px 10px #fcc;
-	color: #fcc;
+	text-shadow: 0px 0px 10px #C30C04;
+	color: #C30C04;
 }
 .wrapper{
 	max-width: 760px;
